# ClothSim

./: CMakeLists.txt  Point.cpp  Point.hpp  Stick.cpp  Stick.hpp  main.cpp
